had to fix navbar for mobile.  I think I tried to streamline it earlier and killed it's visibility

--- a/src/components/ui/NavLinks.module.scss
+++ b/src/components/ui/NavLinks.module.scss
@@ -9,7 +9,7 @@
         }
     }
 
-    @media screen and (max-width: 600px) {
-        display: none;
-    }
+    // @media screen and (max-width: 600px) {
+    //     display: none;
+    // }
 }
